style.css
body{
  padding: 0 0 0 0;
  background-color: #dadada;
  color: red;
  width: 70%;
  margin: auto;
  /*margin-left: 15%;
  margin-right: 15%;*/
  clear: both;
}

.header {
  top: 0px;
  background-color: orange;
  position: fixed;
  margin-left: 0%;
  margin-right: 0%;
  width: 80%
}

.navbar{
  /*display: table;*/
  margin-top: 20px;
  font-size: 10px;
  color: red;
  font-weight: bolder;
  height: 50%;
  position: relative;
}

.navbar ul{
  background-color: rgba(0, 0, 255,0.5);
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  /*position: fixed;*/
  /*width: 100%;*/
}

.navbar > a{
  text-decoration: none;
  color: red;
}

li{
  float:left;
}

  li a {
  display: block;
  color: #000;
  padding: 8px 16px;
  text-decoration: none;
  }

  li a.active {
      /*background-color: #FEC709;*/
      background-color: green;
      font-weight: bold;
      border-color: green;
      border-style: solid;
  }

  li a:hover {
  background-color: #ff1111;
  /*border-bottom: 5px;*/
  /*border-top: 0px;
  border-left: 0px;
  border-right: 0px;*/
  /*border: 0px 0px 5px 0px;*/
  /*border-style: solid;*/
  transition: all .4s ease-in;
}



.sidebar{
  display: block;
  margin-left: auto;
  /*display: table-row;*/
  background-color: rgba(255,00,00,0.3);
  float: right;
  /*width: auto;*/
}


.navbar{
  display: block;
  font-size: 20px;
  color: red;
  font-weight: bolder;
  height: 30px;
  padding-bottom: 2em;
  /*position: fixed;*/
}

.navbarback{
  background: url("image/checkeredflag.jpg");
  width: 100%;
  height: 100%;
  background-size: contain;
}

.navbar .ul{
  background-color: rgba(0, 0, 255,0.5);
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  /*position: fixed;*/
  width: 100%;
}

.bigcontent{
  /*overflow: auto;*/
  display: flex;
  margin-top: 5%;
  clear: both;
}
.content{
  float: left;
  /*background: linear-gradient(skyblue, lightgreen);*/
  display: table;
  /*float: none;*/
}

.boxes{
  /*color: blue;*/
}
table{
  /*background-color: lightblue;*/
}

td{
  /*transition: width 0.5s, height 0.75s;*/
}

td a{
  color: #ddd;
  font-size: 40px;
  font-family: Bodoni MT;
  text-decoration: none;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

tr{
  text-align: center;
}

.race{
  display: table-row;
}

.bottom_aligner {
    display: inline-block;
    height: 100%;
    vertical-align: bottom;
    width: 0px;
}

.image-aus{
  display: table-cell;
  background: url(image/australia.jpg)  no-repeat;
  background-size: cover;

  width: 250px;
  height: 176.2px;

  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-aus:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  /*background-size: cover;*/
  background-size: cover;;
}

.image-china{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/china.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-china:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-bahrain{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/bahrain.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-bahrain:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-russia{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/russia.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-russia:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-spain{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/spain.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-spain:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-monaco{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/monaco.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-monaco:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-canada{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/canada.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-canada:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-baku{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/baku.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-baku:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-austria{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/austria.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-austria:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-uk{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/uk.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-uk:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-hungary{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/hungary.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-hungary:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-belgium{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/belgium.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-belgium:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-italy{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/italy.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-italy:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-singapore{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/singapore.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-singapore:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-japan{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/japan.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-japan:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-malaysia{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/malaysia.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-malaysia:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-usa{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/usa.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-usa:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-mexico{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/mexico.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-mexico:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-brazil{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/brazil.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-brazil:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

.image-uae{
  display: table-cell;
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/uae.jpg) center center no-repeat;
  background-size: cover;;
  width: 250px;
  height: 176.2px;
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.image-uae:hover {
  /*padding: 10px 10px 10px 10px;*/
   background: url(image/ausres.png) center center no-repeat;
  background-size: cover;;
}

